@startuml
' Domain half of the class model. Split from the service half so that neither
' diagram has to be scaled far enough down to make its text unreadable in print.
skinparam dpi 200
skinparam backgroundColor white
skinparam shadowing false
skinparam defaultFontName Times New Roman
skinparam defaultFontSize 13
skinparam linetype ortho
skinparam class {
  BorderColor #2F4F6F
  BackgroundColor #F7FAFF
  FontName Times New Roman
  AttributeFontName Times New Roman
  AttributeFontSize 12
}
enum Decision {
  APPROVE
  REVIEW
  BLOCK
}
class TransactionRequest {
  - tx_id : String
  - sender_account_id : String
  - receiver_account_id : String
  - amount : Float
  - currency : String
  - merchant_category : String
  - device_id : String
  - ip_address : String
  + validate() : Boolean
}
class AnalysisResponse {
  - tx_id : String
  - decision : Decision
  - composite_score : Integer
  - explanation : String
  - processing_time_ms : Float
}
class Account {
  - account_id : String
  - owner_name : String
  - country_code : String
  - avg_monthly_transaction : Float
  - is_blacklisted : Boolean
  - risk_tier : String
  + is_high_risk() : Boolean
}
class Transaction {
  - tx_id : String
  - amount : Float
  - composite_score : Integer
  - decision : String
  - explanation : String
  - created_at : DateTime
  + override_decision(d : Decision) : void
}
TransactionRequest ..> Transaction : persisted as
AnalysisResponse --> Decision : has
Account "1" -- "0..*" Transaction : sends
Account "1" -- "0..*" Transaction : receives
@enduml
